--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@portabletext/react": "^2.0.0",
     "jsdom": "^20.0.1",
     "next": "12.3.1",
     "next-sanity": "^1.0.0",
