--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
+    "date-fns": "^2.29.3",
     "jsdom": "^20.0.1",
     "next": "12.3.1",
     "next-sanity": "^1.0.0",
