--- a/isaiahtaylor-backend/package.json
+++ b/isaiahtaylor-backend/package.json
@@ -7,25 +7,21 @@
   "author": "Isaiah Taylor <isaiah.p.taylor@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "sanity start",
+    "dev": "sanity dev",
     "build": "sanity build"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.35.0",
-    "@sanity/core": "^2.35.0",
-    "@sanity/default-layout": "^2.35.0",
-    "@sanity/default-login": "^2.35.0",
-    "@sanity/desk-tool": "^2.35.0",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.35.0",
+    "@sanity/vision": "^3.1.4",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "styled-components": "^5.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.2.0",
+    "sanity": "^3.1.4"
   },
   "devDependencies": {},
   "repository": {
